删除一些冗余的类和文件

--- a/management-provider-config/src/main/resources/application.yml
+++ b/management-provider-config/src/main/resources/application.yml
@@ -22,3 +22,6 @@ mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/sqlMap/**/*.xml
 
+
+logging:
+  config: classpath:log4j2.xml
